public class CadastroUsuario {
    private int IdUsuario;
    private String NomeUsuario;
    private String EmailUsuario;
    private int TelefoneUsuario;
    private String CPFUsuario;
    private String TipodeUsuario;
    private String Endereco;
    private String login;
    private String senha;

    
}
