import java.util.ArrayList;

public class Carrinho {
    private int IdCarrinho;
    private int IdProduto;
    private int IdPedido;
    private int Quantidade;
    private ArrayList ListarProdutos;

}
