public class Cliente {
    private int IdUsuario;
    private String NomeUsuario;
    private String EnderecoCliente;
    private String CPFUsuario;
    private String Login;
    private String Senha;

}
