public class Estoque {
    private long quantidadeEstoque;
    

}
