public class Pedido {
    private int IdPedido;
    private String IdCliente;
    private Float CalculoPedido;
     

}
