public class Produto {
    private int Idproduto;
    private String NomeProduto;
    private int valorProduto;
}
